@@ -38,8 +38,8 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.2-cvs-b5";
-$gallery->config_version = 30;
+$gallery->version = "1.3.2-cvs-b6";
+$gallery->config_version = 31;
 $gallery->album_version = 4;
 $gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
