@@ -1,3 +1,7 @@
+2002-09-14  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b6
+
+	* Gallery now supports ImageMagick, thanks to a patch from Vallimar!
+
 2002-09-10  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b5
 
 	* Converted from short php tags to long php tags, thanks to a very
